# SpatioTemporalLabeler

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/sample-data/: README.md  seg.seq.nrrd
packaging/: PORTABLE-README.zh-CN.txt  SpatioTemporalLabeler.spec  runtime_hook.py
packaging/linux/: build_linux.sh  install.sh  uninstall.sh
packaging/windows/: build_windows.ps1  install.ps1  uninstall.ps1
src/spatiotemporal_labeler/: __init__.py  app.py  i18n.py
src/spatiotemporal_labeler/io/: __init__.py  nrrd_sequence.py
src/spatiotemporal_labeler/model/: __init__.py  edit_history.py  labels.py
src/spatiotemporal_labeler/tools/: __init__.py  editing.py  interpolation.py  morphology.py  thresholding.py
src/spatiotemporal_labeler/ui/: __init__.py  frame_mapping_dialog.py  icons.py  image_strip.py  import_dialog.py  interpolation_panel.py  label_panel.py  lasso_panel.py  main_window.py  morphology_panel.py  region_grow_panel.py  render_settings.py  settings_dialog.py  slice_view.py  threshold_panel.py  value_slider.py  viewer_3d.py  window_level_panel.py
tests/: test_app.py  test_edit_history.py  test_editing.py  test_image_strip.py  test_interpolation.py  test_labels.py  test_main_window_features.py  test_morphology.py  test_nrrd_sequence.py  test_render_settings.py  test_slice_interactions.py  test_thresholding.py
